--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
         android:id="@+id/selecionar"
         android:layout_width="176dp"
         android:layout_height="56dp"
+        android:backgroundTint="@color/black"
         android:text="Autocarro"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
