--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,17 +31,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.962" />
 
-    <ImageView
-        android:id="@+id/autocarro_imagem"
-        android:layout_width="84dp"
-        android:layout_height="74dp"
-        android:clickable="false"
-        app:layout_constraintBottom_toBottomOf="@+id/map"
+    <Button
+        android:id="@+id/butao_autocarro"
+        android:layout_width="71dp"
+        android:layout_height="68dp"
+        android:backgroundTint="@color/black"
+        app:icon="@drawable/auto"
+        app:iconPadding="30dp"
+        app:iconSize="45dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.964"
+        app:layout_constraintHorizontal_bias="0.965"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.843"
-        app:srcCompat="@drawable/autocarro_pino" />
+        app:layout_constraintVertical_bias="0.854" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
