--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,9 +38,9 @@
         android:layout_height="68dp"
         android:backgroundTint="@color/black"
 
-        app:icon="@drawable/auto"
+        app:icon="@drawable/autocarro_pino"
 
-        app:iconSize="45dp"
+        app:iconSize="40dp"
 
         app:iconTint="#F3EEEE"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -48,6 +48,6 @@
         app:layout_constraintHorizontal_bias="0.965"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.854" />
+        app:layout_constraintVertical_bias="0.83" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
